--- a/backend/CriarDataset.ipynb
+++ b/backend/CriarDataset.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y7dYsqK6XlHa",
-        "outputId": "52430d1e-70f3-4889-eb43-9fbc171f49a7"
+        "outputId": "be77d654-2dcd-4027-a5f1-3f45103dcbea"
       },
       "outputs": [
         {
@@ -17,12 +17,12 @@
           "text": [
             "Collecting groq\n",
             "  Downloading groq-0.9.0-py3-none-any.whl (103 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.5/103.5 kB\u001b[0m \u001b[31m857.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.5/103.5 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from groq) (3.7.1)\n",
             "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from groq) (1.7.0)\n",
             "Collecting httpx<1,>=0.23.0 (from groq)\n",
             "  Downloading httpx-0.27.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from groq) (2.8.0)\n",
             "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from groq) (1.3.1)\n",
             "Requirement already satisfied: typing-extensions<5,>=4.7 in /usr/local/lib/python3.10/dist-packages (from groq) (4.12.2)\n",
@@ -31,14 +31,19 @@
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->groq) (2024.6.2)\n",
             "Collecting httpcore==1.* (from httpx<1,>=0.23.0->groq)\n",
             "  Downloading httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->groq)\n",
             "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: annotated-types>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->groq) (0.7.0)\n",
             "Requirement already satisfied: pydantic-core==2.20.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->groq) (2.20.0)\n",
             "Installing collected packages: h11, httpcore, httpx, groq\n",
-            "Successfully installed groq-0.9.0 h11-0.14.0 httpcore-1.0.5 httpx-0.27.0\n"
+            "Successfully installed groq-0.9.0 h11-0.14.0 httpcore-1.0.5 httpx-0.27.0\n",
+            "Collecting unidecode\n",
+            "  Downloading Unidecode-1.3.8-py3-none-any.whl (235 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m235.5/235.5 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: unidecode\n",
+            "Successfully installed unidecode-1.3.8\n"
           ]
         }
       ],
@@ -49,20 +54,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JvzqPZB2Xp3u",
-        "outputId": "bb071d7a-d322-4bb6-9f67-ed925e549e1c"
+        "outputId": "bfb9e8e1-b4d3-4176-ec4e-d1f4572e6eda"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -74,6 +79,7 @@
         "from groq import Groq\n",
         "from google.colab import userdata\n",
         "import unidecode\n",
+        "from tqdm import tqdm\n",
         "\n",
         "from google.colab import userdata, drive\n",
         "drive.mount('/content/drive')"
@@ -81,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "awl2GhtCX5rR"
       },
@@ -110,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "wS1D9bkIX7WL"
       },
@@ -131,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "Z3w2HHp-gn2w"
       },
@@ -142,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "788k9raZsjIz"
       },
@@ -153,45 +159,98 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aHW2EqNmMBs_"
+      },
+      "source": [
+        "##Adiciona termos relevantes do direito e pesquisas possíveis"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
+      "metadata": {
+        "id": "eVG2npFFKD_2"
+      },
+      "outputs": [],
+      "source": [
+        "second_query = send_message('''\n",
+        "Escreva 100 termos da área de direito, um por linha.\n",
+        "''')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "EZzuOdgvKYfe"
+      },
+      "outputs": [],
+      "source": [
+        "term_list = re.findall(r'\\d+\\. (.*)', second_query)\n",
+        "base['buscas'] += ([unidecode.unidecode(term) for term in term_list])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "dODYDMSIKz4h"
+      },
+      "outputs": [],
+      "source": [
+        "def query_term(term):\n",
+        "  queries = send_message('Você é um estudante de direito estudando, você quer estudar mais sobre o termo: \"{term}\". Cite 3 consultas no Google que você faria, em sequência, enumeradas e uma por linha. Cada consulta deve ter ao máximo 5 palavras'.format(term=term))\n",
+        "  return re.findall(r'\\d+\\. (.*)', queries)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Jen-OmYqKsve",
+        "outputId": "95ede992-0cc4-4922-9688-20ffbd62cf5a"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 100/100 [03:00<00:00,  1.81s/it]\n"
+          ]
+        }
+      ],
+      "source": [
+        "queries = []\n",
+        "for term in tqdm(term_list):\n",
+        "  queries += [unidecode.unidecode(query) for query in query_term(term)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "YeOTgb26NMkR"
+      },
+      "outputs": [],
+      "source": [
+        "base['buscas'] += queries"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
       "metadata": {
         "id": "XIdVi-4lhvhD"
       },
       "outputs": [],
       "source": [
-        "with open('./data/buscas.json', 'w') as jsonfile:\n",
+        "with open('data/buscas.json', 'w') as jsonfile:\n",
         "  json.dump(base, jsonfile)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        },
-        "id": "fIN8Ieo0woot",
-        "outputId": "95862bb1-52f8-4603-edd8-9695621a2ae2"
-      },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'alto la'"
-            ]
-          },
-          "execution_count": 26,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "unidecode.unidecode('alto lá')"
       ]
     }
   ],
